fixing z-index issues w/ headers

--- a/views/shared/css/three-viewer-header.css
+++ b/views/shared/css/three-viewer-header.css
@@ -93,6 +93,7 @@ body {
 	margin-top: 10px;
 	border-radius: 1px;
 	opacity: 0;
+	z-index: 10001;
 }
 
 #primary-nav-viewer .navigation li ul.fade-out {
